--- a/docs/make_expdata_gam_simple.Rmd
+++ b/docs/make_expdata_gam_simple.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Preparation
 
 ### Call packages
+
 ```{r}
 #detach(gam)
 library(dplyr)
@@ -57,7 +58,12 @@ alldata <- read_csv("data_model/model_chla_covars_gam.csv") %>%
 
 ```
 
-Filter to downstream
+
+
+# Only for downstream
+
+## Filter to downstream
+
 ```{r}
 downstream <- alldata %>% filter(region == "below")
 
@@ -67,7 +73,8 @@ downstream$inund_fac  = as.factor(downstream$inund_fac)
 
 ```
 
-Look at covariates
+## Look at covariates
+
 ```{r}
 downstream_long <- pivot_longer(downstream, cols = c(diurnal_range:Sradmwk, log_idys, log_qsdy), names_to = "Parameter", values_to = "Value")
 
@@ -124,11 +131,11 @@ par(op)
 4. "inundation_flag"
 
 Model 0: log_chla = s(Q_sday, by = inundated)
-Model 1: log_chla = s(Q_sday, by = inundated) + s(doy)
-Model 2: log_chla = te(Q_sday, doy, by = inundated)
+Model 1: log_chla = s(Q_sday, by = inundated) + s(dowy)
+Model 2: log_chla = te(Q_sday, dowy, by = inundated)
 Model 3: log_chla = te(Q_sday, cumulative_idys, by = inundated (0,1))
-Model 4: log_chla = te(Q_sday, doy, by = inundation level)
-Model 5: log_chla = te(Q_sday, doy, days_since_inundation, by = inundated)
+Model 4: log_chla = te(Q_sday, dowy, by = inundation level)
+Model 5: log_chla = te(Q_sday, dowy, days_since_inundation, by = inundated)
 
 ```{r}
 
@@ -212,9 +219,9 @@ pacf(resid)
   # validate model gam1.2 - log_chla ~ te(log_qsdy, dowy, by = inundation)
   # -----------------------------------------------------------------------
   # validate the final model by plotting residuals and save to a tiff
-  tiff(filename = "figures/gam_model_validation_qsdy.tiff", width = 8, height = 6, units = "in", res = 100)
+  tiff(filename = "figures/gam_model_validation_qsdy.tiff", width = 6, height = 9, units = "in", res = 100)
   resid = residuals(gam1.2)
-  op = par(mfrow = c(2, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
   # Plot 1: Residuals vs. Fitted values; should be centered around 0
   plot(fitted(gam1.2), resid, xlab = "Fitted values", ylab = "Residuals")
   # Plot 2: histogram of the residuals; should be centered around 0
@@ -223,6 +230,8 @@ pacf(resid)
   acf(resid)
   # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
   plot(x.idys$log_qsdy, resid, xlab = "Flow",   ylab = "Residuals")
+  plot(x.idys$dowy, resid, xlab = "day of water year",   ylab = "Residuals")
+  plot(x.idys$inundation, resid, xlab = "inundation flag",   ylab = "Residuals")
   par(op)
   dev.off()
 
@@ -246,9 +255,9 @@ pacf(resid)
   # validate model gam1.4 - log_chla ~ te(log_qsdy, dowy, by = inund_fac)
   # -----------------------------------------------------------------------
   # validate the final model by plotting residuals and save to a tiff
-  tiff(filename = "figures/gam_model_validation_qsdy_ifac.tiff", width = 8, height = 6, units = "in", res = 100)
+  tiff(filename = "figures/gam_model_validation_qsdy_ifac.tiff", width = 8, height = 10, units = "in", res = 100)
   resid = residuals(gam1.4)
-  op = par(mfrow = c(2, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
   # Plot 1: Residuals vs. Fitted values; should be centered around 0
   plot(fitted(gam1.4), resid, xlab = "Fitted values", ylab = "Residuals")
   # Plot 2: histogram of the residuals; should be centered around 0
@@ -257,6 +266,9 @@ pacf(resid)
   acf(resid)
   # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
   plot(x.idys$log_qsdy, resid, xlab = "Flow same day",   ylab = "Residuals")
+  #plot(x.idys$dowy, resid, xlab = "day of water year",   ylab = "Residuals")
+  plot(x.idys$inund_fac, resid, xlab = "inundation factor",   ylab = "Residuals")
+  plot(x.idys$WTmwk, resid, xlab = "inundation factor",   ylab = "Residuals")
   par(op)
   dev.off()
 
@@ -276,7 +288,8 @@ CI_factor = qt(t_distribution_probability, Inf)
 #~ Generate a data frame with the sequence from the minimum to the maximum
 # observed value of the predictor variable: day of water year
 mod_q_range = range(na.omit(x.idys$log_qsdy))
-med.dowy = median(x.idys$dowy)
+#med.dowy = median(x.idys$dowy)
+med.dowy = quantile(x.idys$dowy, probs = 0.9)
 qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
 n = length(qsdy.ser)
 new_dat_1 = data.frame(cbind(log_qsdy = qsdy.ser, dowy = rep(med.dowy, n)))
@@ -411,7 +424,7 @@ lines(x = gam.i1$log_idys, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha
 
 # Determine the confidence interval to present in your figure and determine the
 # t-distribution value of which to multiply the standard error
-interval_value = 0.95
+interval_value = 0.88
 t_distribution_probability = 1.0 - (1-interval_value)/2
 CI_factor = qt(t_distribution_probability, Inf)
 
@@ -471,4 +484,454 @@ polygon(x = c(gam.i1$log_qsdy, max(gam.i1$log_qsdy), rev(gam.i1$log_qsdy), gam.i
 lines(x = gam.i1$log_qsdy, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
 
 ```
+
+
+
+
+
+
+# Only for Yolo Bypass Region
+
+## Filter to Yolo Bypass
+
+```{r}
+yolo <- alldata %>% filter(region == "yolo")
+
+yolo$inundation = as.factor(yolo$inundation)
+yolo$station    = as.factor(yolo$station)
+yolo$inund_fac  = as.factor(yolo$inund_fac)
+
+```
+
+## scale covariates
+
+```{r}
+yolo_scaled <- yolo %>%
+  mutate(across(.cols = c(log_idys,log_qsdy,diurnal_range:Sradmwk), ~ scale(.x)))
+  
+x <- yolo_scaled
+
+```
+
+
+#### Check for autocorrelation in model, predictor, response
+
+```{r}
+
+op = par(mfrow = c(2, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+
+acf(x$log_chla)
+acf(x$Q_sday)
+acf(x$WTmwk)
+acf(x$Sradmwk)
+
+par(op)
+
+```
+
+### Explore GAMM structure
+
+### discussion with Jereme
+
+1. try constraining the time series
+2. categorize inundation (high, low, no_inundation)
+3. year as random effect
+4. plots of normalized data
+5. plots of response vs. covar
+6. residuals mean 0 and variance similar across the range
+
+
+1. "Days_since_last_inundation"
+2. "days_of_inundation_until_now"
+3. "total_inund_last_year"
+4. "inundation_flag"
+
+## constrain to "day of water year" when Yolo Bypass gets inundated
+
+```{r}
+
+x.idys = subset(x, x$inundation == 1)
+range(x.idys$dowy)
+# min "day of water year" 65; max 214
+
+x.idys = subset(x, (x$dowy >= 65 & x$dowy <= 214))
+table(x.idys$inundation)
+
+gam0 <- gam(log_chla ~ 1, method = "REML", data = x.idys, family = "gaussian")
+gam1.0 <- gam(log_chla ~ s(log_qsdy, by = inundation), method = "REML", data = x.idys, family = "gaussian")
+gam1.1 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(dowy, bs = "cc"), method = "REML", data = x.idys, family = "gaussian")
+gam1.2 <- gam(log_chla ~ te(log_qsdy, dowy, by = inundation), method = "REML", data = x.idys, family = "gaussian")
+gam1.3 <- gam(log_chla ~ te(log_idys, dowy, by = inundation), method = "REML", data = x.idys, family = "gaussian")
+gam1.4 <- gam(log_chla ~ te(log_qsdy, dowy, by = inund_fac),  method = "REML", data = x.idys, family = "gaussian")
+gam1.5 <- gam(log_chla ~ te(log_qsdy, log_idys, dowy),  method = "REML", data = x.idys, family = "gaussian")
+gam1.6 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = x.idys, family = "gaussian")
+
+AIC(gam0, gam1.0, gam1.1, gam1.2, gam1.3, gam1.4, gam1.5, gam1.6)
+
+gam.check(gam1.1)
+gam.check(gam1.2)
+gam.check(gam1.3)
+gam.check(gam1.4)
+
+summary(gam1.1)
+summary(gam1.2)
+summary(gam1.3)
+summary(gam1.4)
+
+resid = residuals(gam1.4)
+acf(resid)
+pacf(resid)
+
+```
+
+
+#### Model validation for the gam model based on hypothesis testing
+
+```{r}
+
+  # validate model gam1.2 - log_chla ~ te(log_qsdy, dowy, by = inundation)
+  # -----------------------------------------------------------------------
+  # validate the final model by plotting residuals and save to a tiff
+  tiff(filename = "figures/gam_model_validation_qsdy_yolo.tiff", width = 6, height = 9, units = "in", res = 100)
+  resid = residuals(gam1.2)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gam1.2), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(x.idys$log_qsdy, resid, xlab = "Flow",   ylab = "Residuals")
+  plot(x.idys$dowy, resid, xlab = "day of water year",   ylab = "Residuals")
+  plot(x.idys$inundation, resid, xlab = "inundation flag",   ylab = "Residuals")
+  par(op)
+  dev.off()
+
+  # validate model gam1.4 - log_chla ~ te(log_qsdy, dowy, by = inund_fac)
+  # -----------------------------------------------------------------------
+  # validate the final model by plotting residuals and save to a tiff
+  tiff(filename = "figures/gam_model_validation_qsdy_ifac_yolo.tiff", width = 8, height = 10, units = "in", res = 100)
+  resid = residuals(gam1.4)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gam1.4), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(x.idys$log_qsdy, resid, xlab = "Flow same day",   ylab = "Residuals")
+  plot(x.idys$dowy, resid, xlab = "day of water year",   ylab = "Residuals")
+  plot(x.idys$inund_fac, resid, xlab = "inundation factor",   ylab = "Residuals")
+  #plot(x.idys$WTmwk, resid, xlab = "water temperature",   ylab = "Residuals")
+  par(op)
+  dev.off()
+
+
+  # validate model gam1.6 - log_chla ~ te(log_qsdy, dowy, by = inundation)
+  # -----------------------------------------------------------------------
+  # validate the final model by plotting residuals and save to a tiff
+  tiff(filename = "figures/gam_model_validation_qsdy_noi_yolo.tiff", width = 6, height = 9, units = "in", res = 100)
+  resid = residuals(gam1.6)
+  op = par(mfrow = c(3, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gam1.6), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(x.idys$log_qsdy, resid, xlab = "Flow",   ylab = "Residuals")
+  plot(x.idys$dowy, resid, xlab = "day of water year",   ylab = "Residuals")
+  plot(x.idys$inundation, resid, xlab = "inundation flag",   ylab = "Residuals")
+  par(op)
+  dev.off()
+
+```
+
+
+### visualize the results for Model gam1.2
+
+```{r}
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.88
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# observed value of the predictor variable: day of water year
+mod_q_range = range(na.omit(x.idys$log_qsdy))
+lqsdy.05 = quantile(x.idys$log_qsdy, probs = 0.05)
+lqsdy.95 = quantile(x.idys$log_qsdy, probs = 0.95)
+#med.dowy = median(x.idys$dowy)
+med.dowy = quantile(x.idys$dowy, probs = 0.5)
+#qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
+qsdy.ser = seq(from = lqsdy.05, to = lqsdy.95, by = 0.02)
+n = length(qsdy.ser)
+new_dat_1 = data.frame(cbind(log_qsdy = qsdy.ser, dowy = rep(med.dowy, n)))
+new_dat_1$inundation = sample(c(0,1), n, replace = TRUE)
+                       
+#~ Use the *predict()* function to estimate model fit and standard error
+preds = predict(gam1.2, newdata = new_dat_1, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+# the upper and lower confidence interval limits
+fit = preds$fit
+upper = fit - CI_factor*preds$se.fit
+lower = fit + CI_factor*preds$se.fit
+
+new_dat_1 = cbind(new_dat_1, fit, upper, lower)
+
+# separate by inundation flag
+gam.i0 = subset(new_dat_1, new_dat_1$inundation == 0)
+gam.i1 = subset(new_dat_1, new_dat_1$inundation == 1)
+
+# separate actual data by inundation flag
+act.i0 = subset(x.idys, x.idys$inundation == 0)
+act.i1 = subset(x.idys, x.idys$inundation == 1)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# plot the actual data points separately for inundated and non-inundated
+colors = c("green", "blue")
+plot(x.idys$log_chla ~ x.idys$log_qsdy, pch = 20, col = colors[x.idys$inundation], las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = expression(log[e]~"(Flow)"), side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i0$log_qsdy, max(gam.i0$log_qsdy), rev(gam.i0$log_qsdy), gam.i0$log_qsdy[1]),
+        y = c(gam.i0$lower, gam.i0$upper[length(gam.i0$upper)], rev(gam.i0$upper), gam.i0$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue = 255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i0$log_qsdy, y = gam.i0$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i1$log_qsdy, max(gam.i1$log_qsdy), rev(gam.i1$log_qsdy), gam.i1$log_qsdy[1]),
+        y = c(gam.i1$lower, gam.i1$upper[length(gam.i1$upper)], rev(gam.i1$upper), gam.i1$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i1$log_qsdy, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+```
+
+
+
+### visualize the results for Model gam1.6
+
+```{r}
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.88
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# observed value of the predictor variable: day of water year
+mod_q_range = range(na.omit(x.idys$log_qsdy))
+lqsdy.05 = quantile(x.idys$log_qsdy, probs = 0.05)
+lqsdy.95 = quantile(x.idys$log_qsdy, probs = 0.95)
+#med.dowy = median(x.idys$dowy)
+med.dowy = quantile(x.idys$dowy, probs = 0.5)
+#qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
+qsdy.ser = seq(from = lqsdy.05, to = lqsdy.95, by = 0.02)
+n = length(qsdy.ser)
+new_dat_1 = data.frame(cbind(log_qsdy = qsdy.ser, dowy = rep(med.dowy, n)))
+
+#~ Use the *predict()* function to estimate model fit and standard error
+preds = predict(gam1.6, newdata = new_dat_1, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+# the upper and lower confidence interval limits
+fit = preds$fit
+upper = fit - CI_factor*preds$se.fit
+lower = fit + CI_factor*preds$se.fit
+
+new_dat_1 = cbind(new_dat_1, fit, upper, lower)
+
+# separate actual data by inundation flag
+act.i0 = subset(x.idys, x.idys$inundation == 0)
+act.i1 = subset(x.idys, x.idys$inundation == 1)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# plot the actual data points separately for inundated and non-inundated
+colors = c("green", "blue")
+plot(x.idys$log_chla ~ x.idys$log_qsdy, pch = 20, col = colors[x.idys$inundation], las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = expression(log[e]~"(Flow)"), side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(new_dat_1$log_qsdy, max(new_dat_1$log_qsdy), rev(new_dat_1$log_qsdy), new_dat_1$log_qsdy[1]),
+        y = c(new_dat_1$lower, new_dat_1$upper[length(gam.i0$upper)], rev(new_dat_1$upper), new_dat_1$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue = 255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = new_dat_1$log_qsdy, y = new_dat_1$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+```
+
+
+### visualize the results for model gam1.3
+
+```{r}
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.95
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# observed value of the predictor variable: day of water year
+mod_q_range = range(na.omit(x.idys$log_idys))
+med.dowy = median(x.idys$dowy)
+qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
+n = length(qsdy.ser)
+new_dat_1 = data.frame(cbind(log_idys = qsdy.ser, dowy = rep(med.dowy, n)))
+new_dat_1$inundation = sample(c(0,1), n, replace = TRUE)
+                       
+#~ Use the *predict()* function to estimate model fit and standard error
+preds = predict(gam1.3, newdata = new_dat_1, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+# the upper and lower confidence interval limits
+fit = preds$fit
+upper = fit - CI_factor*preds$se.fit
+lower = fit + CI_factor*preds$se.fit
+
+new_dat_1 = cbind(new_dat_1, fit, upper, lower)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# separate by inundation flag
+gam.i0 = subset(new_dat_1, new_dat_1$inundation == 0)
+gam.i1 = subset(new_dat_1, new_dat_1$inundation == 1)
+
+# plot the actual data points
+plot(x.idys$log_chla ~ x.idys$log_idys, pch = 20, col = gray(0.1,0.2), las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = expression(log[e]~"(Inundation Days)"), side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i0$log_idys, max(gam.i0$log_idys), rev(gam.i0$log_idys), gam.i0$log_idys[1]),
+        y = c(gam.i0$lower, gam.i0$upper[length(gam.i0$upper)], rev(gam.i0$upper), gam.i0$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i0$log_idys, y = gam.i0$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i1$log_idys, max(gam.i1$log_idys), rev(gam.i1$log_idys), gam.i1$log_idys[1]),
+        y = c(gam.i1$lower, gam.i1$upper[length(gam.i1$upper)], rev(gam.i1$upper), gam.i1$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i1$log_idys, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+```
+
+
+
+### visualize the results for model gam1.4
+
+```{r}
+
+# gam1.4 <- gam(log_chla ~ te(log_qsdy, dowy, by = inund_fac), method = "REML", data = x.idys, family = "gaussian")
+
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.88
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# observed value of the predictor variable: day of water year
+mod_q_range = range(na.omit(x.idys$log_qsdy))
+med.dowy = median(x.idys$dowy)
+qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
+n = length(qsdy.ser)
+new_dat_1 = data.frame(cbind(log_qsdy = qsdy.ser, dowy = rep(med.dowy, n)))
+new_dat_1$inund_fac = sample(c("none", "long", "short"), n, replace = TRUE)
+                       
+#~ Use the *predict()* function to estimate model fit and standard error
+preds = predict(gam1.4, newdata = new_dat_1, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+# the upper and lower confidence interval limits
+fit = preds$fit
+upper = fit - CI_factor*preds$se.fit
+lower = fit + CI_factor*preds$se.fit
+
+new_dat_1 = cbind(new_dat_1, fit, upper, lower)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# separate by inundation flag
+gam.i0 = subset(new_dat_1, new_dat_1$inund_fac == "none")
+gam.i1 = subset(new_dat_1, new_dat_1$inund_fac == "long")
+
+# plot the actual data points
+plot(x.idys$log_chla ~ x.idys$log_qsdy, pch = 20, col = gray(0.1,0.2), las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = expression(log[e]~"(Flow same day)"), side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i0$log_qsdy, max(gam.i0$log_qsdy), rev(gam.i0$log_qsdy), gam.i0$log_qsdy[1]),
+        y = c(gam.i0$lower, gam.i0$upper[length(gam.i0$upper)], rev(gam.i0$upper), gam.i0$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i0$log_qsdy, y = gam.i0$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i1$log_qsdy, max(gam.i1$log_qsdy), rev(gam.i1$log_qsdy), gam.i1$log_qsdy[1]),
+        y = c(gam.i1$lower, gam.i1$upper[length(gam.i1$upper)], rev(gam.i1$upper), gam.i1$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i1$log_qsdy, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+```
+
+
+
 
